...
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"
                            android:padding="0dp">

                            <TextView
                                android:id="@+id/textViewNameLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="8dp"
                                android:paddingTop="3dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="2dp"
                                android:text="@string/nombreAlbumDetail"
                                android:textStyle="bold|italic"
                                tools:text="@string/nombreAlbumDetail" />

                            <TextView
                                android:id="@+id/textViewName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="8dp"
                                android:paddingTop="3dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="2dp"
...
