<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="artist"
            type="com.andes.vinilos.models.Musician" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:context=".ui.ArtistDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="70dp">

                        <LinearLayout
                            android:layout_width="144dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:layout_weight="5"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <ImageView
                                android:id="@+id/imageDetailArtist"
                                android:layout_width="132dp"
                                android:layout_height="180dp"
                                tools:layout_gravity="center_horizontal" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:layout_weight="5"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal"
                                android:padding="0dp">

                                <TextView
                                    android:id="@+id/lblName"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="8dp"
                                    android:paddingTop="3dp"
                                    android:paddingEnd="5dp"
                                    android:paddingBottom="2dp"
                                    android:text="Nombre:"
                                    android:textStyle="bold|italic" />

                                <TextView
                                    android:id="@+id/txtArtistName"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:paddingStart="8dp"
                                    android:paddingTop="3dp"
                                    android:paddingEnd="5dp"
                                    android:paddingBottom="2dp"
                                    android:text="@{artist.name}"
                                    android:maxLines="1"
                                    android:ellipsize="end" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal"
                                android:padding="0dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="8dp"
                                    android:paddingTop="3dp"
                                    android:paddingEnd="5dp"
                                    android:paddingBottom="2dp"
                                    android:text="Descripción:"
                                    android:textStyle="bold|italic" />

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:paddingStart="8dp"
                                    android:paddingTop="3dp"
                                    android:paddingEnd="5dp"
                                    android:paddingBottom="2dp"
                                    android:text="@{artist.description}"
                                    android:maxLines="3"
                                    android:ellipsize="end" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal"
                                android:padding="0dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="8dp"
                                    android:paddingTop="3dp"
                                    android:paddingEnd="5dp"
                                    android:paddingBottom="2dp"
                                    android:text="Fecha de nacimiento:"
                                    android:textStyle="bold|italic" />

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:paddingStart="8dp"
                                    android:paddingTop="3dp"
                                    android:paddingEnd="5dp"
                                    android:paddingBottom="2dp"
                                    android:text="@{artist.formattedBirthDate}"
                                    android:maxLines="1"
                                    android:ellipsize="end" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="372dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:layout_weight="5"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal"
                                android:padding="0dp">

                                <TextView
                                    android:id="@+id/textViewnombrePremiosLabel"
                                    android:layout_width="156dp"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="8dp"
                                    android:paddingTop="3dp"
                                    android:paddingEnd="5dp"
                                    android:paddingBottom="2dp"
                                    android:text="@string/nombrePremiosDropList"
                                    android:textAlignment="center"
                                    android:textStyle="bold|italic"
                                    tools:layout_gravity="center" />


                                <Button
                                    android:id="@+id/buttonPremio"
                                    android:layout_width="110dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:foregroundTint="#8BC34A"
                                    android:importantForAccessibility="yes"
                                    android:importantForAutofill="yes"
                                    android:text="Agregar premio"
                                    android:textSize="10sp" />


                            </LinearLayout>

                            <Spinner
                                android:id="@+id/premiosLista"
                                android:layout_width="273dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal" />


                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </FrameLayout>
</layout>