...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{album.name}"
                    android:textStyle="bold|italic"
                    android:textColor="@color/black"
                    android:paddingStart="8dp"
...
